--- a/src/Components/styles/Navbar.css
+++ b/src/Components/styles/Navbar.css
@@ -1,8 +1,9 @@
 .SearchComponent__container {
-    height: 36px;
+    height: 41px;
 }
 .Navbar {
     width: 100%;
+    height: 71px;
     display: flex;
     align-items: center;
     position: fixed;
@@ -19,7 +20,7 @@
 .nav li {
     display: inherit;
     align-items: center;
-    list-style: none;
+    list-style: none; 
 }
 
 .nav li form {
@@ -33,7 +34,11 @@
 }
 
 .logo_Container {
-    justify-self: left !important;
+   
+}
+.logo_Container a {
+    display: inherit;
+    align-items: center;
 }
 
 input[type="text"] {
@@ -46,26 +51,44 @@ input[type="text"] {
     border-top-right-radius: 0;
 }
 .Search__button {
-    width: 30px;
+    width: 40px;
     height: 100%;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-style: none;
     background-color: #07A4FC;
     color:white;
-    
+    font-size: 15px;
 }
 
 .button_personaliza {
-    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    height: 37px;
+    width: 9%;
+    padding: 0 20px;
     border-radius: 20px;
     border: 2px solid white;
+    /* box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 0.25); */
 }
 .button_personaliza a{
     color:white;
     font-family: 'Lato', sans-serif !important;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: bold;
+}
+
+.cart-icon {
+    font-size: 25px;
+    color: #E0E0E0;
+}
+.avatarImg {
+    width: 45px;
+    height: 45px;
+}
+.avatarImg a {
+    width: 37px;
+    height: 37px;
 }
 
 
