Optimizando mas los recursos :)

--- a/src/Pages/styles/homepage.css
+++ b/src/Pages/styles/homepage.css
@@ -1,5 +1,5 @@
 .homepage_container {
-    background-image: url('../../media/images/Home-min.png');
+    background-image: url('../../media/images/Home-min.jpg');
     width: 100vw;
     height: 100vh;
     background-size: cover;
