--- a/src/Components/styles/Navbar.css
+++ b/src/Components/styles/Navbar.css
@@ -1,11 +1,13 @@
 .Navbar {
+    position: fixed;
     width: 100%;
-    height: 71px;
+    top: 0;
+    right: 0;
+    left: 0;
     display: flex;
     align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
+    z-index: 5;
+
 }
 
 .nav {
