--- a/src/Components/styles/SearchBar.css
+++ b/src/Components/styles/SearchBar.css
@@ -27,13 +27,14 @@ input[type="text"] {
     flex-direction: column;
     position: absolute;
     margin-top: 10px;
-    width: 92%;
+    width: 100%;
     height: auto;
     border-radius: 20px;
     background-color: white;
     padding: 10px;
     object-fit: cover;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+    box-sizing: border-box;
 }
 .show {
     display: flex;
