--- a/src/Pages/styles/homepage.css
+++ b/src/Pages/styles/homepage.css
@@ -1,6 +1,39 @@
 .homepage_container {
-    background-image: url('../../media/images/Home-min.jpg');
+    background-image: url('../../media/images/Home-min.jpg'); 
+    background-size: cover;
+}
+
+.pages {
+    width: 100vw;
+    display: flex;
+    height: 100vh;
+    max-width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    align-items: center;
+    
+}
+  
+.Page-wrap {
     width: 100vw;
     height: 100vh;
-    background-size: cover;
+}
+
+.icon {
+    position: absolute;
+    color: white;
+    display: flex;
+    right: 0;
+    font-size: 28px;
+    width: 74px;
+    height: 70px;
+    border-top: 2.5px solid white;
+    border-left: 2.5px solid white;
+    border-bottom: 2.5px solid white;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    align-items: center;
+    justify-content: center;
 }
