--- a/src/Pages/styles/homepage.css
+++ b/src/Pages/styles/homepage.css
@@ -22,18 +22,26 @@
 }
 
 #iconBrush {
-    position: absolute;
-    color: white;
-    display: flex;
     right: 0;
-    font-size: 28px;
-    width: 74px;
-    height: 70px;
     border-top: 2.5px solid white;
     border-left: 2.5px solid white;
     border-bottom: 2.5px solid white;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    align-items: center;
+}
+
+.icon {
     justify-content: center;
+    align-items: center;
+    position: absolute;
+    color: white;
+    display: flex;
+    font-size: 28px;
+    width: 74px;
+    height: 70px;
+    
+}
+
+#iconCatalogue {
+
 }
