--- a/src/Pages/styles/homepage.css
+++ b/src/Pages/styles/homepage.css
@@ -23,14 +23,14 @@
 
 #iconBrush {
     right: 0;
-    border-top: 2.5px solid white;
-    border-left: 2.5px solid white;
-    border-bottom: 2.5px solid white;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    border-left: 2.5px solid white;
 }
 
 .icon {
+    border-top: 2.5px solid white;
+    border-bottom: 2.5px solid white;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -43,5 +43,7 @@
 }
 
 #iconCatalogue {
-
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-right: 2.5px solid white;
 }
