--- a/src/Pages/styles/Catalogue.css
+++ b/src/Pages/styles/Catalogue.css
@@ -117,6 +117,37 @@
     position: relative;
 }
 
+@media screen and (min-width:1450px) {
+    .cardDevice {
+        flex: 0 0 23%;
+    }
+}
+@media screen and (min-width:1450px) {
+    .cardDevice {
+        flex: 0 0 22%;
+    }
+}
+@media screen and (min-width:1570px) {
+    .cardDevice {
+        flex: 0 0 21%;
+    }
+}
+@media screen and (min-width:1650px) {
+    .cardDevice {
+        flex: 0 0 20%;
+    }
+}
+@media screen and (min-width:1633px) {
+    .cardDevice {
+        flex: 0 0 19%;
+    }
+}
+@media screen and (min-width:1800px) {
+    .cardDevice {
+        flex: 0 0 18%;
+    }
+}
+
 .image-container {
     width: 100%;
     height: 340px;
@@ -173,7 +204,7 @@ body {
     background-color: white;
     
     box-sizing: border-box;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.6);
 }
 
