--- a/src/Pages/styles/Catalogue.css
+++ b/src/Pages/styles/Catalogue.css
@@ -6,19 +6,23 @@
 
 .bg-container {
     position: fixed;
-    top: 0%;
+    top: -100%;
     z-index: 2;
     width: 100%;
     height: 69px;
     background-color: #006BCE;
     transition-property: all;
-    transition-duration: 0.8s;
+    transition-duration: 1s;
     transition-timing-function: ease;
 }
 
 .catalogue {
+    transition-delay: 0.8s;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: ease;
     width: 100%;
-    
+    opacity: 0;
     display: flex;
     justify-content: space-evenly;
     padding-top: 69px;
@@ -220,5 +224,9 @@ body {
 }
 
 .smartphone {
-    margin-top: 70px;
+    margin-top: 10%;
+}
+
+.title-filter {
+    margin-bottom: 10px;
 }
