Fin de la corrupcion de la mafia de poder

--- a/src/Pages/styles/Catalogue.css
+++ b/src/Pages/styles/Catalogue.css
@@ -290,3 +290,7 @@ body::-webkit-scrollbar-thumb:active {
     justify-self: right;
     cursor: pointer;
 }
+
+.catalogue-link {
+    color: inherit;
+}
