--- a/src/Pages/styles/deviceInfo.css
+++ b/src/Pages/styles/deviceInfo.css
@@ -148,6 +148,7 @@
     color: white;
     font-weight: 700;
     font-size: 20px;
+    cursor: pointer;
 }
 
 .counter-resta {
@@ -161,6 +162,7 @@
     border-top-right-radius: 40px;
     border-bottom-right-radius: 40px;
     font-size: 20px;
+    cursor: pointer;
 }
 
 .cantidad-title {
