--- a/src/Pages/styles/Catalogue.css
+++ b/src/Pages/styles/Catalogue.css
@@ -157,6 +157,7 @@
 }
 
 .image-container {
+    position: relative;
     width: 100%;
     height: 340px;
     padding: 10px;
@@ -172,17 +173,39 @@
     height: 100%;
     border-radius: 20px;
     object-fit: cover;
-    position: relative;
+   
 }
 
-.deviceImage::after:hover {
-    content: '';
+.comprarContainer {
     position: absolute;
-    top: 0;
-    left: 0;
+    display: flex;
     width: 100%;
     height: 100%;
-    background-color: red;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    opacity: 0;
+    transition-property: all;
+    transition-duration: 0.2s;
+    transition-timing-function: ease;
+}
+
+.comprarContainer:hover {
+    opacity: 1;
+}
+
+.comprarContainer > * {
+    border-radius: 20px;
+    background-color: #006BCE;
+    padding: 15px;
+    font-size: 13px;
+    font-weight: 500;
 }
 
 .deviceTitle {
